# todo_app

./: Cargo.toml  LICENSE  README.md
css/: style.css
js/: script.js
src/: main.rs
templates/: index.html
