[package]
name = "concatsql_todo"
version = "0.1.0"
authors = ["kmgy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
#concatsql = { version = "0.3.0", features = ["sqlite"] }
#concatsql = { path = "/mnt/c/home/ConcatSQL", features = ["sqlite"] }
concatsql = { path = "/home/ConcatSQL", features = ["sqlite"] }
serde = { verion = "1.0", features = ["derive"] }
thiserror = "1.0.22"
